--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-gist": "^1.2.4",
     "react-twitter-embed": "^4.0.4"
   },
   "devDependencies": {
