--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-gist": "^1.2.4",
+    "react-jupyter-notebook": "^0.4.0",
     "react-twitter-embed": "^4.0.4"
   },
   "devDependencies": {
